syntax = "proto3";
package bilibili.app.distribution.v1;

option go_package = "git.bilibili.co/bapis/bapis-go/bilibili/app/distribution;distribution";
option java_package = "com.bapis.bilibili.app.distribution";
option java_multiple_files = true;
option objc_class_prefix = "BAPIAppDistribution";

message defaultValue {
    oneof value {
        double double_value = 1;
        float float_value = 2;
        int64 int64_value = 3;
        uint64 uint64_value = 4;
        int32 int32_value = 5;
        uint32 uint32_value = 6;
        bool bool_value = 7;
        string string_value = 8;
        bytes bytes_value = 9;
    }
}

// Wrapper message for `double`.
//
// The JSON representation for `DoubleValue` is JSON number.
message DoubleValue {
    // The double value.
    double value = 1;
    int64 last_modified = 2;
    double default_value = 3;
    string exp = 4;
}

// Wrapper message for `float`.
//
// The JSON representation for `FloatValue` is JSON number.
message FloatValue {
    // The float value.
    float value = 1;
    int64 last_modified = 2;
    float default_value = 3;
    string exp = 4;
}

// Wrapper message for `int64`.
//
// The JSON representation for `Int64Value` is JSON string.
message Int64Value {
    // The int64 value.
    int64 value = 1;
    int64 last_modified = 2;
    int64 default_value = 3;
    string exp = 4;
}

// Wrapper message for `uint64`.
//
// The JSON representation for `UInt64Value` is JSON string.
message UInt64Value {
    // The uint64 value.
    uint64 value = 1;
    int64 last_modified = 2;
    uint64 default_value = 3;
    string exp = 4;
}

// Wrapper message for `int32`.
//
// The JSON representation for `Int32Value` is JSON number.
message Int32Value {
    // The int32 value.
    int32 value = 1;
    int64 last_modified = 2;
    int32 default_value = 3;
    string exp = 4;
}

// Wrapper message for `uint32`.
//
// The JSON representation for `UInt32Value` is JSON number.
message UInt32Value {
    // The uint32 value.
    uint32 value = 1;
    int64 last_modified = 2;
    uint32 default_value = 3;
    string exp = 4;
}

// Wrapper message for `bool`.
//
// The JSON representation for `BoolValue` is JSON `true` and `false`.
message BoolValue {
    // The bool value.
    bool value = 1;
    int64 last_modified = 2;
    bool default_value = 3;
    string exp = 4;
}

// Wrapper message for `string`.
//
// The JSON representation for `StringValue` is JSON string.
message StringValue {
    // The string value.
    string value = 1;
    int64 last_modified = 2;
    string default_value = 3;
    string exp = 4;
}

// Wrapper message for `bytes`.
//
// The JSON representation for `BytesValue` is JSON string.
message BytesValue {
    // The bytes value.
    bytes value = 1;
    int64 last_modified = 2;
    bytes default_value = 3;
    string exp = 4;
}
